--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LuxeTanıtım — Reklam & İşletme Tanıtımı</title>
-  <meta name="description" content="LuxeTanıtım — Sade ama lüks hissettiren reklam ve işletme tanıtım sitesi." />
+  <title>Lax Media — Reklam & İşletme Tanıtımı</title>
+  <meta name="description" content="Lax Media— Sade ama lüks hissettiren reklam ve işletme tanıtım sitesi." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{--bg:#060609;--card:rgba(255,255,255,0.03);--gold:#c69b47;--muted:rgba(255,255,255,0.6);--glass:rgba(255,255,255,0.03);--container:1100px}
