--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -65,7 +65,7 @@
       <div class="brand">
         <div class="logo">L</div>
         <div>
-          <h1>LuxeTanıtım</h1>
+          <h1>Lax Media</h1>
           <p>Reklam &amp; İşletme Tanıtımı</p>
         </div>
       </div>
@@ -83,7 +83,7 @@
         <div class="hero-left">
           <div class="eyebrow">KURUMSAL · STRATEJİ · YARATICILIK</div>
           <h2>Markanıza lüks bir dokunuş — sade ama etkili tanıtım çözümleri.</h2>
-          <p class="lead">LuxeTanıtım, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar. Marka kimliği, kampanya yönetimi ve yaratıcı prodüksiyon hizmetleriyle fark yaratın.</p>
+          <p class="lead">Lax Media, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar. Marka kimliği, kampanya yönetimi ve yaratıcı prodüksiyon hizmetleriyle fark yaratın.</p>
 
           <div class="actions">
             <a class="cta" href="#contact">Ücretsiz Keşif</a>
@@ -163,7 +163,7 @@
     </main>
 
     <footer>
-      © LuxeTanıtım • Tasarım: Mehmet • İletişim: iletisim@luxetanitim.com
+      © Lax Media• Tasarım: Mehmet • İletişim: iletisim@luxetanitim.com
     </footer>
   </div>
 
