--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -113,9 +113,9 @@
             <h3>Hızlı Bilgi</h3>
             <p class="muted">Hazır paketlerimiz ve özelleştirilmiş tekliflerimiz var. Aşağıdaki form ile bize ulaşın, 24 saat içinde ön bilgiler gönderelim.</p>
             <div style="margin-top:12px">
-              <strong>Ofis:</strong> İstanbul, Türkiye
+              <strong>Ofis:</strong> Manisa , Türkiye
               <br>
-              <strong>Telefon:</strong> +90 555 000 0000
+              <strong>Telefon:</strong> +90 552 7247936
             </div>
           </div>
 
