--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -115,7 +115,7 @@
             <div style="margin-top:12px">
               <strong>Ofis:</strong> Manisa , Türkiye
               <br>
-              <strong>Telefon:</strong> +90 552 7247936
+              <strong>Telefon:</strong> +90 552 724 79 36
             </div>
           </div>
 
