--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -130,7 +130,7 @@
     </main>
 
     <footer>
-      © LuxeTanıtım • Tasarım: Mehmet • İletişim: iletisim@luxetanitim.com
+      © LuxeTanıtım • Tasarım: Mehmet • İletişim: iletisim@laxmedia.com
     </footer>
   </div>
 </body>
