Refactor HTML structure and update meta descriptionlaxmedia2
Updated the meta description and restructured the HTML document with a new header, main sections, and footer.

--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>LuxeTanıtım — Reklam & İşletme Tanıtımı</title>
-  <meta name="description" content="LuxeTanıtım — sade ama lüks hissettiren reklam ve işletme tanıtım sitesi." />
+  <meta name="description" content="LuxeTanıtım ." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -129,9 +129,75 @@
       </section>
     </main>
 
-    <footer>
-      © LuxeTanıtım • Tasarım: Mehmet • İletişim: iletisim@laxmedia.com
-    </footer>
-  </div>
+    <!doctype html>
+<html lang="tr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>LuxeTanıtım - Reklam & İşletme Tanıtımı</title>
+</head>
+<body>
+  <header>
+    <h1>LuxeTanıtım</h1>
+    <p>Reklam · Tasarım · İşletme Tanıtımı</p>
+    <nav>
+      <a href="#services">Hizmetler</a> |
+      <a href="#portfolio">Projeler</a> |
+      <a href="#contact">İletişim</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="intro">
+      <h2>Hoş Geldiniz</h2>
+      <p>
+        LuxeTanıtım; sade ama lüks hissettiren reklam, işletme tanıtımı ve dijital tasarım çözümleri sunar.
+      </p>
+    </section>
+
+    <section id="services">
+      <h2>Hizmetlerimiz</h2>
+      <ul>
+        <li>Marka Stratejisi</li>
+        <li>Yaratıcı Reklam Çalışmaları</li>
+        <li>Prodüksiyon ve Görsel Tasarım</li>
+      </ul>
+    </section>
+
+    <section id="portfolio">
+      <h2>Projeler</h2>
+      <p>Geçmişte çalıştığımız bazı örnek projeler:</p>
+      <ul>
+        <li>Kurumsal Tanıtım Kampanyası</li>
+        <li>Yeni Marka Lansman Videosu</li>
+        <li>Premium Sosyal Medya Yönetimi</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>İletişim</h2>
+      <p>Formu doldurun, size en kısa sürede dönüş yapalım.</p>
+      <!-- 🔹 Formspree bağlantını buraya ekle -->
+      <form action="https://formspree.io/f/xxxxxxx" method="POST">
+        <label>Ad / Şirket:</label><br>
+        <input type="text" name="name" required><br><br>
+
+        <label>E-posta:</label><br>
+        <input type="email" name="email" required><br><br>
+
+        <label>Telefon (opsiyonel):</label><br>
+        <input type="text" name="phone"><br><br>
+
+        <label>Mesajınız:</label><br>
+        <textarea name="message" rows="5" required></textarea><br><br>
+
+        <button type="submit">Gönder</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 LuxeTanıtım — Reklam & İşletme Tanıtımı</p>
+  </footer>
 </body>
 </html>
