Rename LuxeTanıtım to Lax Media in HTML file

--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LuxeTanıtım — Reklam & İşletme Tanıtımı</title>
+  <title>Lax Media — Reklam & İşletme Tanıtımı</title>
   <meta name="description" content="LuxeTanıtım - Reklam & İşletme Tanıtımı." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -105,7 +105,7 @@
         <div class="hero-left">
           <div class="eyebrow">KURUMSAL · STRATEJİ · YARATICILIK</div>
           <h2>Markanıza lüks bir dokunuş — sade ama etkili tanıtım çözümleri.</h2>
-          <p class="lead">LuxeTanıtım, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar.</p>
+          <p class="lead">Lax Media, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar.</p>
           <div class="actions">
             <a class="cta" href="#contact">Ücretsiz Keşif</a>
             <a class="muted" href="#portfolio" style="align-self:center;padding:6px 10px;border-radius:8px;text-decoration:none">Portfolyoya Bak</a>
@@ -148,7 +148,7 @@
     </main>
 
     <footer>
-      <p>© 2025 LuxeTanıtım — Reklam & İşletme Tanıtımı</p>
+      <p>© 2025 Lax Media — Reklam & İşletme Tanıtımı</p>
     </footer>
   </div>
 </body>
