Change header title from 'LuxeTanıtım' to 'Lax Media'

--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -88,7 +88,7 @@
       <div class="brand">
         <img src="logo.jpg" alt="LAX Medya Logo">
         <div>
-          <h1>LuxeTanıtım</h1>
+          <h1>Lax Media</h1>
           <p>Reklam & İşletme Tanıtımı</p>
         </div>
       </div>
