Fix alt attribute for logo image

--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -86,7 +86,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <img src="logo.jpg" alt="LAX Medya Logo">
+        <img src="logo.jpg" alt="logo.jpg">
         <div>
           <h1>Lax Media</h1>
           <p>Reklam & İşletme Tanıtımı</p>
