Refactor header and add Lax Media logo
Updated header structure and added logo image.

--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -85,8 +85,10 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="brand">
-        <img src="logo.jpg" alt="logo.jpg">
+      <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
         <div>
           <h1>Lax Media</h1>
           <p>Reklam & İşletme Tanıtımı</p>
@@ -99,6 +101,10 @@
         <a class="cta" href="#contact">Teklif Al</a>
       </nav>
     </header>
+    <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
 
     <main>
       <section class="hero">
