--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -81,7 +81,10 @@
     @media (max-width:980px){.hero{flex-direction:column}.hero-right{width:100%}.services{grid-template-columns:repeat(2,1fr)}.portfolio{grid-template-columns:repeat(2,1fr)}}
     @media (max-width:560px){nav{display:none}.brand img{width:52px}.wrap{padding:16px}.services{grid-template-columns:1fr}.portfolio{grid-template-columns:1fr}}
   </style>
-</head>
+</head> <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
 <body>
   <div class="wrap">
     <header>
