--- a/tek_dosya_web_sitesi_index.html
+++ b/tek_dosya_web_sitesi_index.html
@@ -1,1 +1,164 @@
-<!doctype html><html lang="tr"><head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /> <title>Lax Media — Reklam & İşletme Tanıtımı</title> <meta name="description" content="Lax Media - Reklam & İşletme Tanıtımı." /> <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet"> <style> :root { --bg:#ffffff; --text:#111111; --card:rgba(0,0,0,0.04); --gold:#c69b47; --muted:rgba(0,0,0,0.6); --container:1100px; } *{box-sizing:border-box;margin:0;padding:0} html,body{height:100%} body{ font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,Arial; color:var(--text); background:var(--bg); -webkit-font-smoothing:antialiased; } .wrap{max-width:var(--container);margin:36px auto;padding:28px} header{display:flex;align-items:center;justify-content:space-between;gap:18px} .brand{display:flex;align-items:center;gap:14px} .brand img{ width:64px; height:auto; border-radius:10px; object-fit:contain; background:#fff; box-shadow:0 2px 6px rgba(0,0,0,0.05); padding:4px; } .brand h1{margin:0;font-size:18px} .brand p{margin:0;font-size:12px;color:var(--muted)} nav{display:flex;gap:16px} nav a{color:var(--muted);text-decoration:none;padding:8px 10px;border-radius:8px;font-weight:600} nav a:hover{color:var(--gold)} .cta{ background:linear-gradient(90deg,var(--gold),#f3d06b); color:#fff; padding:9px 14px; border-radius:10px; text-decoration:none; font-weight:700; box-shadow:0 2px 6px rgba(0,0,0,0.1); } .hero{display:flex;align-items:center;gap:28px;margin-top:26px} .hero-left{flex:1;padding:28px;background:rgba(0,0,0,0.02);border-radius:16px} .eyebrow{color:var(--gold);font-weight:700;font-size:13px;letter-spacing:1px} h2{margin:12px 0 8px;font-size:34px;line-height:1.05;color:var(--text)} p.lead{margin:0;color:var(--muted);font-size:16px} .actions{margin-top:18px;display:flex;gap:12px} .hero-right{width:420px} .card{background:var(--card);padding:18px;border-radius:14px} .services{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:20px} .service{padding:18px;border-radius:12px;background:rgba(0,0,0,0.02);min-height:120px;transition:all .28s} .service:hover{transform:translateY(-6px)} .service h4{margin:0 0 8px} .muted{color:var(--muted);font-size:14px} .portfolio{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:18px} .portfolio .item{height:150px;border-radius:10px;overflow:hidden;background-size:cover;background-position:center;box-shadow:inset 0 0 0 1000px rgba(255,255,255,0.1);transition:all .28s} .portfolio .item:hover{transform:scale(1.03)} input,textarea{background:#fff;border:1px solid rgba(0,0,0,0.1);padding:12px;border-radius:10px;color:#111;width:100%} button{ background:linear-gradient(90deg,var(--gold),#f3d06b); border:none;padding:12px 14px; border-radius:10px;font-weight:800; cursor:pointer;color:#fff; box-shadow:0 2px 6px rgba(0,0,0,0.1); } footer{margin-top:30px;color:var(--muted);font-size:14px;text-align:center} .divider{height:1px;background:rgba(0,0,0,0.06);margin:20px 0;border-radius:1px} @media (max-width:980px){.hero{flex-direction:column}.hero-right{width:100%}.services{grid-template-columns:repeat(2,1fr)}.portfolio{grid-template-columns:repeat(2,1fr)}} @media (max-width:560px){nav{display:none}.brand img{width:52px}.wrap{padding:16px}.services{grid-template-columns:1fr}.portfolio{grid-template-columns:1fr}} </style></head> <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;"> <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;"></header><body> <div class="wrap"> <header> <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;"> <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;"></header> <div> <h1>Lax Media</h1> <p>Reklam & İşletme Tanıtımı</p> </div> </div> <nav> <a href="#services">Hizmetler</a> <a href="#portfolio">Projeler</a> <a href="#contact">İletişim</a> <a class="cta" href="#contact">Teklif Al</a> </nav> </header> <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;"> <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;"></header> <main> <section class="hero"> <div class="hero-left"> <div class="eyebrow">KURUMSAL · STRATEJİ · YARATICILIK</div> <h2>Markanıza lüks bir dokunuş — sade ama etkili tanıtım çözümleri.</h2> <p class="lead">Lax Media, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar.</p> <div class="actions"> <a class="cta" href="#contact">Ücretsiz Keşif</a> <a class="muted" href="#portfolio" style="align-self:center;padding:6px 10px;border-radius:8px;text-decoration:none">Portfolyoya Bak</a> </div> <div class="divider"></div> <div class="services" id="services"> <div class="service card"><h4>Marka Stratejisi</h4><div class="muted">Hedef kitlenize uygun, ölçülebilir stratejiler kuruyoruz.</div></div> <div class="service card"><h4>Yaratıcı Reklam</h4><div class="muted">Video, banner ve sosyal medya kampanyalarıyla etki yaratın.</div></div> <div class="service card"><h4>Prodüksiyon</h4><div class="muted">Fotoğrafçılık, video ve post-prodüksiyon hizmetleri.</div></div> </div> </div> <aside class="hero-right"> <div class="card"> <h3>Mini Portfolyo</h3> <div class="portfolio" id="portfolio"> <div class="item" style="background-image:url('https://picsum.photos/seed/1/800/600')"></div> <div class="item" style="background-image:url('https://picsum.photos/seed/2/800/600')"></div> <div class="item" style="background-image:url('https://picsum.photos/seed/3/800/600')"></div> </div> </div> </aside> </section> <section style="margin-top:26px" id="contact"> <div class="card"> <h3>İletişim & Teklif Talebi</h3> <p class="muted">Formu doldurun, kısa sürede dönüş yapalım. E-postanıza yanıt gönderilecektir.</p> <form action="https://formspree.io/f/xxxxxxx" method="POST"> <input name="name" placeholder="Adın / Şirket" required /> <input name="email" placeholder="E-posta" type="email" required /> <input name="phone" placeholder="Telefon (opsiyonel)" /> <textarea name="message" placeholder="Kısa proje özeti ve beklenti" rows="5" required></textarea> <button type="submit">Teklif İste</button> </form> </div> </section> </main> <footer> <p>© 2025 Lax Media — Reklam & İşletme Tanıtımı</p> </footer> </div></body></html>
+<!doctype html>
+<html lang="tr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Lax Media — Reklam & İşletme Tanıtımı</title>
+  <meta name="description" content="Lax Media - Reklam & İşletme Tanıtımı." />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg:#ffffff;
+      --text:#111111;
+      --card:rgba(0,0,0,0.04);
+      --gold:#c69b47;
+      --muted:rgba(0,0,0,0.6);
+      --container:1100px;
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto,Arial;
+      color:var(--text);
+      background:var(--bg);
+      -webkit-font-smoothing:antialiased;
+    }
+
+    .wrap{max-width:var(--container);margin:36px auto;padding:28px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:18px}
+    .brand{display:flex;align-items:center;gap:14px}
+    .brand img{
+      width:64px;
+      height:auto;
+      border-radius:10px;
+      object-fit:contain;
+      background:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.05);
+      padding:4px;
+    }
+    .brand h1{margin:0;font-size:18px}
+    .brand p{margin:0;font-size:12px;color:var(--muted)}
+    nav{display:flex;gap:16px}
+    nav a{color:var(--muted);text-decoration:none;padding:8px 10px;border-radius:8px;font-weight:600}
+    nav a:hover{color:var(--gold)}
+    .cta{
+      background:linear-gradient(90deg,var(--gold),#f3d06b);
+      color:#fff;
+      padding:9px 14px;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:700;
+      box-shadow:0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .hero{display:flex;align-items:center;gap:28px;margin-top:26px}
+    .hero-left{flex:1;padding:28px;background:rgba(0,0,0,0.02);border-radius:16px}
+    .eyebrow{color:var(--gold);font-weight:700;font-size:13px;letter-spacing:1px}
+    h2{margin:12px 0 8px;font-size:34px;line-height:1.05;color:var(--text)}
+    p.lead{margin:0;color:var(--muted);font-size:16px}
+    .actions{margin-top:18px;display:flex;gap:12px}
+    .hero-right{width:420px}
+    .card{background:var(--card);padding:18px;border-radius:14px}
+    .services{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:20px}
+    .service{padding:18px;border-radius:12px;background:rgba(0,0,0,0.02);min-height:120px;transition:all .28s}
+    .service:hover{transform:translateY(-6px)}
+    .service h4{margin:0 0 8px}
+    .muted{color:var(--muted);font-size:14px}
+    .portfolio{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:18px}
+    .portfolio .item{height:150px;border-radius:10px;overflow:hidden;background-size:cover;background-position:center;box-shadow:inset 0 0 0 1000px rgba(255,255,255,0.1);transition:all .28s}
+    .portfolio .item:hover{transform:scale(1.03)}
+    input,textarea{background:#fff;border:1px solid rgba(0,0,0,0.1);padding:12px;border-radius:10px;color:#111;width:100%}
+    button{
+      background:linear-gradient(90deg,var(--gold),#f3d06b);
+      border:none;padding:12px 14px;
+      border-radius:10px;font-weight:800;
+      cursor:pointer;color:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.1);
+    }
+    footer{margin-top:30px;color:var(--muted);font-size:14px;text-align:center}
+    .divider{height:1px;background:rgba(0,0,0,0.06);margin:20px 0;border-radius:1px}
+    @media (max-width:980px){.hero{flex-direction:column}.hero-right{width:100%}.services{grid-template-columns:repeat(2,1fr)}.portfolio{grid-template-columns:repeat(2,1fr)}}
+    @media (max-width:560px){nav{display:none}.brand img{width:52px}.wrap{padding:16px}.services{grid-template-columns:1fr}.portfolio{grid-template-columns:1fr}}
+  </style>
+</head> <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
+<body>
+  <div class="wrap">
+    <header>
+      <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
+        <div>
+          <h1>Lax Media</h1>
+          <p>Reklam & İşletme Tanıtımı</p>
+        </div>
+      </div>
+      <nav>
+        <a href="#services">Hizmetler</a>
+        <a href="#portfolio">Projeler</a>
+        <a href="#contact">İletişim</a>
+        <a class="cta" href="#contact">Teklif Al</a>
+      </nav>
+    </header>
+    <header style="display: flex; align-items: center; justify-content: center; background-color: white; padding: 20px;">
+  <img src="lax media.jpg" alt="Lax Media" style="height: 80px; object-fit: contain;">
+</header>
+
+
+    <main>
+      <section class="hero">
+        <div class="hero-left">
+          <div class="eyebrow">KURUMSAL · STRATEJİ · YARATICILIK</div>
+          <h2>Markanıza lüks bir dokunuş — sade ama etkili tanıtım çözümleri.</h2>
+          <p class="lead">Lax Media, reklam ve işletme tanıtımında güçlü vizyon, premium tasarım ve sonuç odaklı stratejiler sunar.</p>
+          <div class="actions">
+            <a class="cta" href="#contact">Ücretsiz Keşif</a>
+            <a class="muted" href="#portfolio" style="align-self:center;padding:6px 10px;border-radius:8px;text-decoration:none">Portfolyoya Bak</a>
+          </div>
+
+          <div class="divider"></div>
+          <div class="services" id="services">
+            <div class="service card"><h4>Marka Stratejisi</h4><div class="muted">Hedef kitlenize uygun, ölçülebilir stratejiler kuruyoruz.</div></div>
+            <div class="service card"><h4>Yaratıcı Reklam</h4><div class="muted">Video, banner ve sosyal medya kampanyalarıyla etki yaratın.</div></div>
+            <div class="service card"><h4>Prodüksiyon</h4><div class="muted">Fotoğrafçılık, video ve post-prodüksiyon hizmetleri.</div></div>
+          </div>
+        </div>
+
+        <aside class="hero-right">
+          <div class="card">
+            <h3>Mini Portfolyo</h3>
+            <div class="portfolio" id="portfolio">
+              <div class="item" style="background-image:url('https://picsum.photos/seed/1/800/600')"></div>
+              <div class="item" style="background-image:url('https://picsum.photos/seed/2/800/600')"></div>
+              <div class="item" style="background-image:url('https://picsum.photos/seed/3/800/600')"></div>
+            </div>
+          </div>
+        </aside>
+      </section>
+
+      <section style="margin-top:26px" id="contact">
+        <div class="card">
+          <h3>İletişim & Teklif Talebi</h3>
+          <p class="muted">Formu doldurun, kısa sürede dönüş yapalım. E-postanıza yanıt gönderilecektir.</p>
+
+          <form action="https://formspree.io/f/xxxxxxx" method="POST">
+            <input name="name" placeholder="Adın / Şirket" required />
+            <input name="email" placeholder="E-posta" type="email" required />
+            <input name="phone" placeholder="Telefon (opsiyonel)" />
+            <textarea name="message" placeholder="Kısa proje özeti ve beklenti" rows="5" required></textarea>
+            <button type="submit">Teklif İste</button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 Lax Media — Reklam & İşletme Tanıtımı</p>
+    </footer>
+  </div>
+</body>
+</html>
